<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMarginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guidelines_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMarginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guidelines_margin" />

    <Button
        android:id="@+id/btnTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_and_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTitleTextLargeIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_text_and_large_icon"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTitleText" />

    <Button
        android:id="@+id/btnTitleTextExpandableIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_text_and_expandable_large_icon"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/btnTitleTextLargeIcon" />

    <Button
        android:id="@+id/btnTitleTextSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_text_and_custom_sound_vibration"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTitleTextExpandableIcon" />

    <Button
        android:id="@+id/btnTitleTextIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_text_and_intent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/btnTitleTextSound" />

    <Button
        android:id="@+id/btnTitleTextActionIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:backgroundTint="@color/teal_200"
        android:text="@string/title_text_and_action_intent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTitleTextIntent" />

</androidx.constraintlayout.widget.ConstraintLayout>